--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "predis/predis": "^1.1",
         "symfony/monolog-bundle": "^3.1",
         "symfony/dotenv": "^4.0",
-        "symfony/process": "^4.0",
-        "symfony/cache": "^4.0"
+        "symfony/process": "^4.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.0",
