Added JWT token auth

--- a/Server/package.json
+++ b/Server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "argparse": "^1.0.9",
+    "jsonwebtoken": "^8.5.1",
     "redis": "^2.6.3",
     "socket.io": "^2.0.4",
     "winston": "^2.0.0"
