--- a/composer.json
+++ b/composer.json
@@ -15,21 +15,30 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "symfony/framework-bundle": "^4.0|^5.0",
+        "php": "^7.1",
+        "symfony/framework-bundle": "^4.4 || ^5.0",
         "predis/predis": "^1.1",
         "symfony/monolog-bundle": "^3.1",
         "ezyang/htmlpurifier": "^4.0",
-        "symfony/dotenv": "^4.0|^5.0",
-        "symfony/process": "^4.0|^5.0"
+        "symfony/dotenv": "^4.4 || ^5.0",
+        "symfony/process": "^4.4 || ^5.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.0|^5.0",
-        "friendsofphp/php-cs-fixer": "^2.8"
+        "symfony/phpunit-bridge": "^4.4 || ^5.0",
+        "friendsofphp/php-cs-fixer": "^2.8",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
             "SfCod\\SocketIoBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "SfCod\\QueueBundle\\Tests\\": "/Tests/"
         }
     }
 }
