--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/process": "^5.4"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.0|^5.0",
+        "symfony/phpunit-bridge": "^5.4",
         "friendsofphp/php-cs-fixer": "^2.8"
     },
     "autoload": {
