--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "symfony/framework-bundle": "^5.4",
-        "predis/predis": "^1.1",
+        "php": "^8.0",
+        "symfony/framework-bundle": "^5.4 || ^6.0",
+        "predis/predis": "^1.1 || ^2.0",
         "symfony/monolog-bundle": "^3.1",
         "ezyang/htmlpurifier": "^4.0",
-        "symfony/dotenv": "^5.4",
-        "symfony/process": "^5.4"
+        "symfony/dotenv": "^5.4 || ^6.0",
+        "symfony/process": "^5.4 || ^6.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.4",
+        "symfony/phpunit-bridge": "^5.4 || ^6.0",
         "friendsofphp/php-cs-fixer": "^2.8"
     },
     "autoload": {
