--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
     ],
     "require": {
         "php": "^8.0",
-        "symfony/framework-bundle": "^5.4 || ^6.0",
+        "symfony/framework-bundle": "^7.1.3",
         "predis/predis": "^1.1 || ^2.0",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/monolog-bundle": "^3.10.0",
         "ezyang/htmlpurifier": "^4.0",
-        "symfony/dotenv": "^5.4 || ^6.0",
-        "symfony/process": "^5.4 || ^6.0"
+        "symfony/dotenv": "^7.1.3",
+        "symfony/process": "^7.1.3"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.4 || ^6.0",
-        "friendsofphp/php-cs-fixer": "^2.8"
+        "symfony/phpunit-bridge": "^7.1.3",
+        "friendsofphp/php-cs-fixer": "^3.62.0"
     },
     "autoload": {
         "psr-4": {
