--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     ],
     "require": {
         "php": "^8.0",
-        "symfony/framework-bundle": "^7.1.3",
+        "symfony/framework-bundle": "^v6.4.10",
         "predis/predis": "^1.1 || ^2.0",
         "symfony/monolog-bundle": "^3.10.0",
         "ezyang/htmlpurifier": "^4.0",
-        "symfony/dotenv": "^7.1.3",
-        "symfony/process": "^7.1.3"
+        "symfony/dotenv": "^v6.4.10",
+        "symfony/process": "^v6.4.8"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^7.1.3",
+        "symfony/phpunit-bridge": "^v6.4.10",
         "friendsofphp/php-cs-fixer": "^3.62.0"
     },
     "autoload": {
